<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/new_recipe"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_recipe"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/show_subtitle"
        android:title="@string/show_subtitle"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/show_webview"
        android:icon="@drawable/ic_menu_web"
        android:title="@string/web_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_map"
        android:icon="@drawable/ic_menu_map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />



</menu>